--- a/app/src/main/res/layout/fragment_vi_en_dic.xml
+++ b/app/src/main/res/layout/fragment_vi_en_dic.xml
@@ -6,9 +6,10 @@
     tools:context=".view.ViEnDicFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_en_vi_dic"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:padding="10dp"/>
 
 </FrameLayout>
